# WhereDoesItGo

./: .gitignore  README.md  package.json
BackEnd/: app.py  db.py  pyproject.toml  schema.py  setup.py
BackEnd/migrations/: alembic.ini
BackEnd/migrations/versions/: 2022-04-02_5c7d34163ef0_rename.py  2022-04-02_e503739d6d04_add_uuid_column.py  2022-04-03_64ec5c5dc7f3_test_dummy_123.py  b7a39c2d5e1e_make_id_uuid_non_nullable.py
FrontEnd/: index.html  package.json
FrontEnd/src/: App.jsx  index.css  main.jsx
FrontEnd/src/components/: Allotment.jsx  Header.jsx  hours.jsx
FrontEnd/src/components/forms/: hours.jsx
FrontEnd/src/data-retrieval/: mutations.js  queries.js
FrontEnd/src/stores/: store.js
