[tool.poetry]
name = "BackEnd"
version = "0.1.0"
description = ""
authors = ["Jamil Lawrence <jamil.lawrence@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
Flask-Cors = "^3.0.10"
Flask-SQLAlchemy = "^2.5.1"
psycopg2 = "^2.9.3"
Flask-GraphQL = "^2.0.1"
graphene-sqlalchemy = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
